# Rapper

./: .gitignore  CLAUDE.md  HERMES_INTEGRATION.md  HERMES_INTEGRATION_DEMO.md  HERMES_INTEGRATION_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  MERGE_ENHANCEMENT_SUMMARY.md  PITFALL-31-FIX.md  PYCACHE_MERGE_FIX.md  README.md  TODO.md  board  demo.py  demo_enhanced_merge.sh  demo_parallel_detection.md  dummy-log  e2e_test_doc.md  hello.py  hello.txt  launch_daemons.py  pyproject.toml  qa_proof.txt  rapper  test.txt  test_board_integration.py  test_board_tools.py  test_completed_at_bug.py  test_corrected.py  test_daemon_blocking_simple.py  test_enhanced_merge.py  test_fix.py  test_idempotency.py  test_integration.py  test_k007_create_task.py  test_merge_enhanced_simple.sh  test_merge_fix.py  test_merge_with_task_runner.py  test_parallel_logic.py  test_parse.py  test_pitfall_31_fix.py  (+2 more)
config/: default-config.yaml  outbound_guard.py  setup_settings.py
lib/: auth.py  board_tools.py  daemon.py  db.py  hermes_integration.py  task_runner.py
sources/: bilibili-ismism-1-2-3-4.md  bilibili-ismism-1-2-4-3.md  bilibili-ismism-1-2-4-4.md  bilibili-ismism-1-2-4.md  bilibili-ismism-1-3-2.md  bilibili-ismism-1-3-4.md  bilibili-ismism-1-4-1-3.md  bilibili-ismism-1-4-1.md  bilibili-ismism-1-4-3-1.md  bilibili-ismism-1-4-3-2.md  bilibili-ismism-1-4-3-3.md  bilibili-ismism-1-4-3.md  bilibili-ismism-1-4-4-4.md  bilibili-ismism-1-4-4.md  bilibili-ismism-1242.md  bilibili-ismism-14.md  bilibili-ismism-1412.md  bilibili-ismism-2-1-1-2.md  bilibili-ismism-2-1-1-4.md  bilibili-ismism-2-1-1.md  (+73 more)
(+155 files in other folders)
