[project]
name = "rapper"
version = "0.1.0"
description = "Claude Code wrapper with safety guardrails 🎤"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
